--- a/EntrevistiaWEB/EntrevistiaWEB/packages.config
+++ b/EntrevistiaWEB/EntrevistiaWEB/packages.config
@@ -23,12 +23,19 @@
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net48" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.0" targetFramework="net48" />
+  <package id="Microsoft.Owin" version="4.2.3" targetFramework="net48" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.3" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security" version="4.2.3" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security.Cookies" version="4.2.3" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security.Google" version="4.2.3" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security.OAuth" version="4.2.3" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net48" />
   <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net48" />
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
   <package id="MongoDB.Bson" version="3.6.0" targetFramework="net48" />
   <package id="MongoDB.Driver" version="3.6.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="Owin" version="1.0" targetFramework="net48" />
   <package id="SharpCompress" version="0.30.1" targetFramework="net48" />
   <package id="Snappier" version="1.0.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
