Botton de google

--- a/EntrevistiaWEB/EntrevistiaWEB/Web.config
+++ b/EntrevistiaWEB/EntrevistiaWEB/Web.config
@@ -4,10 +4,16 @@
   https://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+  <configSections>
+    <section name="configBuilders" type="System.Configuration.ConfigurationBuildersSection, System.Configuration, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" restartOnExternalChanges="false" requirePermission="false" />
+  </configSections>
+  <configBuilders>
+    <builders>
+      <add name="Secrets" userSecretsId="9119c740-c7d5-428d-b16b-c9737e006dda" type="Microsoft.Configuration.ConfigurationBuilders.UserSecretsConfigBuilder, Microsoft.Configuration.ConfigurationBuilders.UserSecrets, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+    </builders>
+  </configBuilders>
   <appSettings>
-
-	<add key="owin:AppStartup" value="EntrevistiaWEB.Startup"/>
-	  
+    <add key="owin:AppStartup" value="EntrevistiaWEB.Startup" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
