--- a/EntrevistiaWEB/EntrevistiaWEB/packages.config
+++ b/EntrevistiaWEB/EntrevistiaWEB/packages.config
@@ -22,6 +22,8 @@
   <package id="Microsoft.AspNet.WebPages.es" version="3.2.9" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net48" />
+  <package id="Microsoft.Configuration.ConfigurationBuilders.Base" version="3.0.0" targetFramework="net48" />
+  <package id="Microsoft.Configuration.ConfigurationBuilders.UserSecrets" version="3.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.0" targetFramework="net48" />
   <package id="Microsoft.Owin" version="4.2.3" targetFramework="net48" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.3" targetFramework="net48" />
